--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Подключен файл со стандартными стилями bootstrap -->
   <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
-  {% block title %} Тут должен быть заголовок {% endblock %}
+  <title>{% block title %} Тут должен быть заголовок {% endblock %}</title>
 </head>
 <body>
 
