--- a/yatube/templates/groups/index.html
+++ b/yatube/templates/groups/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  <title>Записи сообщества {{ group }}</title>
+  Записи сообщества {{ group }}
 {% endblock %}
 
 {% block content %}
