--- a/yatube/templates/groups/index.html
+++ b/yatube/templates/groups/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <h1>{{ group }}</h1>
       <p>{{ group.description }}</p>
-      {% for post in posts %}
+      {% for post in page_obj %}
         <ul>
           <li>
             Автор: {{ post.author.get_full_name }}
@@ -19,10 +19,11 @@
           </li>
         </ul>
         <p>{{ post.text }}</p>
-        <a href="">все записи группы</a>
         {% if not forloop.last %}
-          <hr>{% endif %}
+          <hr>
+        {% endif %}
       {% endfor %}
+      {% include 'includes/paginator.html' %}
     </div>
   </main>
 {% endblock %}
