--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,8 +1,8 @@
-<!-- Использованы классы бустрапа: -->
+<!-- Использованы классы бутстрапа: -->
 <!-- border-top: создаёт тонкую линию сверху блока -->
 <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
 <!-- py-3: контент внутри размещается с отступом сверху и снизу -->
 <footer class="border-top text-center py-3">
   <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
-  <p>© 2020 Copyright <span style="color:red">Ya</span>tube</p>
+  <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>
 </footer>
