--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -8,7 +8,7 @@
   <main>
     <div class="container">
       <h1>Последние обновления на сайте</h1>
-      {% for post in posts %}
+      {% for post in page_obj %}
         <ul>
           <li>
             Автор: {{ post.author.get_full_name }}
@@ -27,6 +27,7 @@
           <hr>
         {% endif %}
       {% endfor %}
+      {% include 'includes/paginator.html' %}
     </div>
   </main>
 {% endblock %}
