--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
-{% block title %} Профайл пользователя {{username}} {% endblock %}
+
+{% block title %}
+  Профайл пользователя {{ author }}
+{% endblock %}
+
 {% block content %}
   <main>
     <div class="container py-5">
-      <h1>Все посты пользователя {{ username }} </h1>
-      <h3>Всего постов: {{post_counter}} </h3>
+      <h1>Все посты пользователя {{ author }} </h1>
+      <h3>Всего постов: {{ post_counter }} </h3>
       {% for post in page_obj %}
         <article>
           <ul>
             <li>
               Автор: {{ post.author.get_full_name }}
-{#              <a href=""> Все посты пользователя</a>#}
+              {#<a href=""> Все посты пользователя</a>#}
             </li>
             <li>
               Дата публикации: {{ post.pub_date|date:"d E Y" }}
@@ -19,7 +23,7 @@
           <p>
             {{ post.text }}
           </p>
-          <a href="">
+          <a href="{% url 'posts:post_detail' post.pk %}">
             Подробная информация
           </a>
         </article>
