--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -19,16 +19,22 @@
         </ul>
         <p>{{ post.text }}</p>
         {% if post.group %}
-          <li><a href="{% url 'posts:group_list' post.group.slug %}">
-            Все записи группы
-          </a></li>
+          <li>
+            <a href="{% url 'posts:group_list' post.group.slug %}">
+              Все записи группы
+            </a>
+          </li>
         {% endif %}
-        <li><a href="{% url 'posts:post_detail' post.pk %}">
-          Подробная информация
-        </a></li>
-        <li><a href="{% url 'posts:profile' post.author.username %}">
-          Все посты пользователя
-        </a></li>
+        <li>
+          <a href="{% url 'posts:post_detail' post.pk %}">
+            Подробная информация
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'posts:profile' post.author.username %}">
+            Все посты пользователя
+          </a>
+        </li>
         {% if not forloop.last %}
           <hr>
         {% endif %}
