--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Профайл пользователя {{ author }}
+  Профайл пользователя {{ author.get_full_name }}
 {% endblock %}
 
 {% block content %}
   <main>
     <div class="container py-5">
-      <h1>Все посты пользователя {{ author }} </h1>
-      <h3>Всего постов: {{ post_counter }} </h3>
+      <h1>Все посты пользователя {{ author.get_full_name }} </h1>
+      <h3>Всего постов: {{ author.posts.count }} </h3>
       {% for post in page_obj %}
         <article>
           <ul>
@@ -23,15 +23,18 @@
           <p>
             {{ post.text }}
           </p>
-          <a href="{% url 'posts:post_detail' post.pk %}">
-            Подробная информация
-          </a>
+          <ul>
+            <li><a href="{% url 'posts:post_detail' post.pk %}">
+              Подробная информация
+            </a></li>
+
+            {% if post.group %}
+              <li><a href="{% url 'posts:group_list' post.group.slug %}">
+                Все записи группы
+              </a></li>
+            {% endif %}
+          </ul>
         </article>
-        {% if post.group %}
-          <a href="{% url 'posts:group_list' post.group.slug %}">
-            Все записи группы
-          </a>
-        {% endif %}
         {% if not forloop.last %}
           <hr>
         {% endif %}
