--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,20 +1,19 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Профайл пользователя {{ author.get_full_name }}
+  Профайл пользователя {{ user.get_full_name }}
 {% endblock %}
 
 {% block content %}
   <main>
     <div class="container py-5">
-      <h1>Все посты пользователя {{ author.get_full_name }} </h1>
-      <h3>Всего постов: {{ author.posts.count }} </h3>
+      <h1>Все посты пользователя {{ user.get_full_name }} </h1>
+      <h3>Всего постов: {{ user.posts.count }} </h3>
       {% for post in page_obj %}
         <article>
           <ul>
             <li>
               Автор: {{ post.author.get_full_name }}
-              {#<a href=""> Все посты пользователя</a>#}
             </li>
             <li>
               Дата публикации: {{ post.pub_date|date:"d E Y" }}
