--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -21,9 +21,14 @@
             <div class="card-body">
               {% if is_edit %}
                 <form method="post"
-                      action="{% url 'posts:post_edit' post_id=post.pk %}">
+                      action="{% url 'posts:post_edit' post_id=post.pk %}"
+                      enctype="multipart/form-data"
+                >
               {% else %}
-                <form method="post" action="{% url 'posts:post_create' %}">
+                <form method="post"
+                      action="{% url 'posts:post_create' %}"
+                      enctype="multipart/form-data"
+                >
               {% endif %}
               {% csrf_token %}
               <div class="form-group row my-3 p-3">
@@ -64,7 +69,18 @@
                     {{ form.group.help_text|safe }}
                   </small>
                 {% endif %}
-
+              </div>
+              <div class="form-group row my-3 p-3">
+                <label for="id_image">
+                  {{ form.image.label }}
+                </label>
+                {{ form.image|addclass:'form-control' }}
+                {% if field.help_text %}
+                  <small id="{{ form.image.id_for_label }}"
+                         class="form-text text-muted">
+                    {{ form.image.help_text|safe }}
+                  </small>
+                {% endif %}
               </div>
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">
