--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load thumbnail %}
+
 {% block title %}
   Записи сообщества {{ group }}
 {% endblock %}
@@ -18,6 +20,9 @@
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
         <p>{{ post.text }}</p>
         {% if not forloop.last %}
           <hr>
