--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load thumbnail %}
+
 {% block title %}
   Пост {{ title }}
 {% endblock %}
@@ -24,7 +26,8 @@
             <li class="list-group-item">
               Автор: {{ post.author.get_full_name }}
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="
+            list-group-item d-flex justify-content-between align-items-center">
               Всего постов автора: <span>{{ post.author.posts.count }}</span>
             </li>
             <li class="list-group-item">
@@ -35,11 +38,23 @@
           </ul>
         </aside>
         <article class="col-12 col-md-9">
-          <p>
-            {{ post.text }}
-          </p>
-        </article>
+
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}">
+          {% endthumbnail %}
+          <article class="col-12 col-md-9">
+            <p>
+              {{ post.text }}
+            </p>
+            {% if user == post.author %}
+              <a class="btn btn-primary"
+                 href="{% url 'posts:post_edit' post.id %}">
+                Редактировать запись
+              </a>
+            {% endif %}
+          </article>
       </div>
+    {% include 'posts/comments.html' %}
     </div>
   </main>
 {% endblock %}
