--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 
+{% load thumbnail %}
+
 {% block title %}
-  Профайл пользователя {{ user.get_full_name }}
+  Профайл пользователя {{ author.get_full_name }}
 {% endblock %}
 
 {% block content %}
   <main>
     <div class="container py-5">
-      <h1>Все посты пользователя {{ user.get_full_name }} </h1>
-      <h3>Всего постов: {{ user.posts.count }} </h3>
+      <h1>Все посты пользователя {{ author.get_full_name }} </h1>
+      <h3>Всего постов: {{ author.posts.count }} </h3>
       {% for post in page_obj %}
         <article>
           <ul>
@@ -19,6 +21,9 @@
               Дата публикации: {{ post.pub_date|date:"d E Y" }}
             </li>
           </ul>
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
           <p>
             {{ post.text }}
           </p>
