Added Subscribing, Follow page and tests for them

--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Об авторе проекта{% endblock %}
 {% block content %}
-  <div class="container">
-    <h1>Привет, я автор</h1>
+  <div class="container py-5">
+    <div class="mb-5"><h1>Привет, я автор</h1></div>
     <p>
       Тут я размещу информацию о себе, используя свои умения верстать.
       Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько
