--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Последние обновления на сайте{% endblock %}
+{% block title %}Избранные авторы{% endblock %}
 {% block content %}
   <main>
     <div class="container py-5">
-      <div class="mb-5"><h1>Последние обновления на сайте</h1></div>
+      <div class="mb-5"><h1>Избранные авторы</h1></div>
+      {{ authors }}
       {% include 'posts/includes/switcher.html' %}
       {% for post in page_obj %}
         <article>
