--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -8,25 +8,16 @@
 
 {% block content %}
   <main>
-    <div class="container">
-      <h1>{{ group }}</h1>
+    <div class="container py-5">
+      <div class mb-5><h1>{{ group }}</h1></div>
       <p>{{ group.description }}</p>
       {% for post in page_obj %}
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <p>{{ post.text }}</p>
-        {% if not forloop.last %}
-          <hr>
-        {% endif %}
+        <article>
+          {% include 'posts/includes/post_list.html' %}
+          {% if not forloop.last %}
+            <hr>
+          {% endif %}
+        </article>
       {% endfor %}
       {% include 'includes/paginator.html' %}
     </div>
