--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -13,7 +13,7 @@
         <aside class="col-12 col-md-3">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
+              Дата публикации: {{ post.created|date:"d E Y" }}
             </li>
             {% if post.group.title %}
               <li class="list-group-item">
@@ -54,7 +54,7 @@
             {% endif %}
           </article>
       </div>
-    {% include 'posts/comments.html' %}
+      {% include 'posts/comments.html' %}
     </div>
   </main>
 {% endblock %}
