--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -9,39 +9,39 @@
 {% block content %}
   <main>
     <div class="container py-5">
-      <h1>Все посты пользователя {{ author.get_full_name }} </h1>
-      <h3>Всего постов: {{ author.posts.count }} </h3>
+      <div class="mb-5">
+        <h1>Все посты пользователя {{ author.get_full_name }} </h1>
+        <h3>Всего постов: {{ author.posts.count }} </h3>
+        {% if author != user %}{% if following %}
+          <a
+                  class="btn btn-lg btn-light"
+                  href="{% url 'posts:profile_unfollow' author.username %}"
+                  role="button"
+          >
+            Отписаться
+          </a>
+        {% else %}
+          <a
+                  class="btn btn-lg btn-primary"
+                  href="{% url 'posts:profile_follow' author.username %}"
+                  role="button"
+          >
+            Подписаться
+          </a>
+        {% endif %}{% endif %}
+      </div>
       {% for post in page_obj %}
         <article>
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
-            </li>
-          </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-          <p>
-            {{ post.text }}
-          </p>
-          <ul>
-            <li><a href="{% url 'posts:post_detail' post.pk %}">
-              Подробная информация
+          {% include 'posts/includes/post_list.html' %}
+          {% if post.group %}
+            <li><a href="{% url 'posts:group_list' post.group.slug %}">
+              Все записи группы
             </a></li>
-
-            {% if post.group %}
-              <li><a href="{% url 'posts:group_list' post.group.slug %}">
-                Все записи группы
-              </a></li>
-            {% endif %}
-          </ul>
+          {% endif %}
+          {% if not forloop.last %}
+            <hr>
+          {% endif %}
         </article>
-        {% if not forloop.last %}
-          <hr>
-        {% endif %}
       {% endfor %}
       {% include 'includes/paginator.html' %}
     </div>
