--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -3,20 +3,23 @@
 {% block content %}
   <main>
     <div class="container py-5">
-      <div class="mb-5"><h1>Избранные авторы</h1></div>
-      {{ authors }}
+      <div class="mb-5">
+        <h1>Избранные авторы</h1>
+      </div>
       {% include 'posts/includes/switcher.html' %}
       {% for post in page_obj %}
         <article>
           {% include 'posts/includes/post_list.html' %}
           {% if post.group %}
             <li>
-              <a href="{% url 'posts:group_list' post.group.slug %}">Все записи
-                группы</a>
+              <a href="{% url 'posts:group_list' post.group.slug %}">
+                Все записи группы
+              </a>
             </li>
           {% endif %}
           {% if not forloop.last %}
-            <hr>{% endif %}
+            <hr>
+          {% endif %}
         </article>
       {% endfor %}
       {% include 'includes/paginator.html' %}
