--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -9,7 +9,9 @@
 {% block content %}
   <main>
     <div class="container py-5">
-      <div class mb-5><h1>{{ group }}</h1></div>
+      <div class mb-5>
+        <h1>{{ group }}</h1>
+      </div>
       <p>{{ group.description }}</p>
       {% for post in page_obj %}
         <article>
