--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -12,31 +12,31 @@
       <div class="mb-5">
         <h1>Все посты пользователя {{ author.get_full_name }} </h1>
         <h3>Всего постов: {{ author.posts.count }} </h3>
-        {% if author != user %}{% if following %}
-          <a
-                  class="btn btn-lg btn-light"
-                  href="{% url 'posts:profile_unfollow' author.username %}"
-                  role="button"
-          >
-            Отписаться
-          </a>
-        {% else %}
-          <a
-                  class="btn btn-lg btn-primary"
-                  href="{% url 'posts:profile_follow' author.username %}"
-                  role="button"
-          >
-            Подписаться
-          </a>
-        {% endif %}{% endif %}
+        {% if author != user %}
+          {% if following %}
+            <a class="btn btn-lg btn-light"
+               href="{% url 'posts:profile_unfollow' author.username %}"
+               role="button">
+              Отписаться
+            </a>
+          {% else %}
+            <a class="btn btn-lg btn-primary"
+               href="{% url 'posts:profile_follow' author.username %}"
+               role="button">
+              Подписаться
+            </a>
+          {% endif %}
+        {% endif %}
       </div>
       {% for post in page_obj %}
         <article>
           {% include 'posts/includes/post_list.html' %}
           {% if post.group %}
-            <li><a href="{% url 'posts:group_list' post.group.slug %}">
-              Все записи группы
-            </a></li>
+            <li>
+              <a href="{% url 'posts:group_list' post.group.slug %}">
+                Все записи группы
+              </a>
+            </li>
           {% endif %}
           {% if not forloop.last %}
             <hr>
