--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -6,7 +6,8 @@
   <!-- Сайт готов работать с мобильными устройствами -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Загружаем фав-иконки -->
-  <link rel="icon" href={% static 'img/fav/favicon.ico' %} type="image">
+  <link rel="shortcut icon" type="image/png"
+        href="{% static 'img/logo.png' %}"/>
   <link rel="apple-touch-icon" sizes="180x180"
         href={% static 'img/fav/apple-touch-icon.png' %}>
   <link rel="icon" type="image/png" sizes="32x32"
@@ -16,19 +17,27 @@
   <meta name="msapplication-TileColor" content="#000">
   <meta name="theme-color" content="#ffffff">
   <!-- Подключен файл со стандартными стилями bootstrap -->
-  <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+          crossorigin="anonymous"></script>
   <title>{% block title %} Тут должен быть заголовок {% endblock %}</title>
 </head>
 <body>
 
 {% include 'includes/header.html' %}
 
-{% block content %}
+<div class="mt-5">{% block content %}
   Тут должен быть контент страницы
-{% endblock %}
+{% endblock %}</div>
 
 {% include 'includes/footer.html' %}
 
