--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,21 +1,22 @@
 {% load static %}
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light"
-       style="background-color: lightskyblue">
+<header class="fixed-top" style="width: 100%">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark"
+       >
     <div class="container">
       <a class="navbar-brand" href="{% url 'posts:index' %}">
         <img src="{% static 'img/logo.png' %}" width="30" height="30"
              class="d-inline-block align-top" alt="">
         <span style="color:red">Ya</span>tube
       </a>
-      <button class="navbar-toggler ms-auto" type="button" data-toggle="collapse"
-              data-target="#navbarNav" aria-controls="navbarNav"
-              aria-expanded="false" aria-label="Toggle navigation">
+      <button style="border: none !important;" class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         {% with request.resolver_match.view_name as view_name %}
-          <ul class="nav nav-pills ms-auto">
+          <ul class="nav navbar-nav ms-auto align-items-right">
             <li class="nav-item">
               <a class="nav-link
                     {% if view_name  == 'about:author' %}
@@ -81,30 +82,4 @@
       </div>
     </div>
   </nav>
-  {#  <nav class="navbar navbar-expand-md navbar-dark bg-primary">#}
-  {#    <div class="container-fluid">#}
-  {#        <a class="navbar-brand abs" href="#">Navbar 1</a>#}
-  {#        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">#}
-  {#            <span class="navbar-toggler-icon"></span>#}
-  {#        </button>#}
-  {#        <div class="navbar-collapse collapse" id="collapseNavbar">#}
-  {#            <ul class="navbar-nav">#}
-  {#                <li class="nav-item active">#}
-  {#                    <a class="nav-link" href="#">Link</a>#}
-  {#                </li>#}
-  {#                <li class="nav-item">#}
-  {#                    <a class="nav-link" href="//codeply.com">Codeply</a>#}
-  {#                </li>#}
-  {#                <li class="nav-item">#}
-  {#                    <a class="nav-link" href="#myAlert" data-bs-toggle="collapse">Link</a>#}
-  {#                </li>#}
-  {#            </ul>#}
-  {#            <ul class="navbar-nav ms-auto">#}
-  {#                <li class="nav-item">#}
-  {#                    <a class="nav-link" href="" data-bs-target="#myModal" data-bs-toggle="modal">About</a>#}
-  {#                </li>#}
-  {#            </ul>#}
-  {#        </div>#}
-  {#    </div>#}
-  {#</nav>#}
 </header>
