--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -16,6 +16,8 @@
         href={% static 'img/fav/favicon-16x16.png' %}>
   <meta name="msapplication-TileColor" content="#000">
   <meta name="theme-color" content="#ffffff">
+  <meta name="viewport"
+        content="initial-scale=1.0, user-scalable=no, maximum-scale=1"/>
   <!-- Подключен файл со стандартными стилями bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -35,9 +37,11 @@
 
 {% include 'includes/header.html' %}
 
-<div class="mt-5">{% block content %}
-  Тут должен быть контент страницы
-{% endblock %}</div>
+<main class="mt-5">
+  {% block content %}
+    Тут должен быть контент страницы
+  {% endblock %}
+</main>
 
 {% include 'includes/footer.html' %}
 
