--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -5,4 +5,8 @@
 <footer class="border-top text-center py-3">
   <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
   <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>
+  <p>
+    <a href="{% url 'about:map' %}" class="link-dark"
+       style="text-decoration: none">Карта сайта</a>
+  </p>
 </footer>
