--- a/yatube/templates/includes/paginator.html
+++ b/yatube/templates/includes/paginator.html
@@ -1,13 +1,13 @@
 {% if page_obj.has_other_pages %}
   <nav aria-label="Page navigation" class="my-5">
-    <ul class="pagination">
+    <ul class="pagination justify-content-center">
       {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link" href="?page=1">Первая</a>
+        <li class="page-item">
+          <a class="page-link bi-chevron-double-left" href="?page=1"></a>
         </li>
         <li class="page-item">
-          <a class="page-link"
+          <a class="page-link bi-chevron-left"
              href="?page={{ page_obj.previous_page_number }}">
-            Предыдущая
           </a>
         </li>
       {% endif %}
@@ -16,7 +16,7 @@
           <li class="page-item active">
             <span class="page-link">{{ i }}</span>
           </li>
-        {% else %}
+        {% elif i > page_obj.number|add:'-2' and i < page_obj.number|add:'2' %}
           <li class="page-item">
             <a class="page-link" href="?page={{ i }}">{{ i }}</a>
           </li>
@@ -24,13 +24,13 @@
       {% endfor %}
       {% if page_obj.has_next %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}">
-            Следующая
+          <a class="page-link bi-chevron-right"
+             href="?page={{ page_obj.next_page_number }}">
           </a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">
-            Последняя
+          <a class="page-link bi-chevron-double-right"
+             href="?page={{ page_obj.paginator.num_pages }}">
           </a>
         </li>
       {% endif %}
