--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -7,53 +7,54 @@
 {% endblock %}
 
 {% block content %}
-  <main>
-    <div class="container">
-      <div class="row">
-        <aside class="col-12 col-md-3">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              Дата публикации: {{ post.created|date:"d E Y" }}
-            </li>
-            {% if post.group.title %}
-              <li class="list-group-item">
-                Группа:
-                <a href="{% url 'posts:group_list' post.group.slug %}">
-                  Все записи группы
-                </a>
-              </li>
-            {% endif %}
-            <li class="list-group-item">
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li class="
-            list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора: <span>{{ post.author.posts.count }}</span>
-            </li>
-            <li class="list-group-item">
-              <a href="{% url 'posts:profile' post.author.username %}">
-                Все посты пользователя
-              </a>
-            </li>
-          </ul>
-        </aside>
-        <article class="col-12 col-md-9">
-          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}">
-          {% endthumbnail %}
-          <article class="col-12 col-md-9">
-            <p>
-              {{ post.text }}
-            </p>
-            {% if user == post.author %}
-              <a class="btn btn-primary"
-                 href="{% url 'posts:post_edit' post.id %}">
-                Редактировать запись
-              </a>
-            {% endif %}
-          </article>
-      </div>
-      {% include 'posts/comments.html' %}
+  <div class="container pt-4">
+    <div>
+      <h1>{{ post }}</h1>
     </div>
-  </main>
+    <div class="row">
+      <aside class="col-12 col-md-3">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            Дата публикации: {{ post.created|date:"d E Y" }}
+          </li>
+          {% if post.group.title %}
+            <li class="list-group-item">
+              Группа:
+              <a href="{% url 'posts:group_list' post.group.slug %}">
+                Все записи группы
+              </a>
+            </li>
+          {% endif %}
+          <li class="list-group-item">
+            Автор: {{ post.author.get_full_name }}
+          </li>
+          <li class="
+            list-group-item d-flex justify-content-between align-items-center">
+            Всего постов автора: <span>{{ post.author.posts.count }}</span>
+          </li>
+          <li class="list-group-item">
+            <a href="{% url 'posts:profile' post.author.username %}">
+              Все посты пользователя
+            </a>
+          </li>
+        </ul>
+      </aside>
+      <article class="col-12 col-md-9">
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
+        <article class="col-12 col-md-9">
+          <p>
+            {{ post.text }}
+          </p>
+          {% if user == post.author %}
+            <a class="btn btn-primary"
+               href="{% url 'posts:post_edit' post.id %}">
+              Редактировать запись
+            </a>
+          {% endif %}
+        </article>
+    </div>
+    {% include 'posts/comments.html' %}
+  </div>
 {% endblock %}
