--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html> <!-- Используется html 5 версии -->
 <html lang="ru"> <!-- Язык сайта - русский -->
 <head>
+  <script async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2599889350753491"
+          crossorigin="anonymous"></script>
   <meta charset="utf-8"> <!-- Кодировка сайта -->
   <!-- Сайт готов работать с мобильными устройствами -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,12 +41,62 @@
 {% include 'includes/header.html' %}
 
 <main class="mt-5">
+  <div class="container text-center pt-4">
+    <a href="https://sellios.ru/"><img
+            src="{% static 'img/ads/970x250_sellios_0100-1.gif' %}"
+            class="rounded img-fluid" alt="Тут должна быть реклама"></a>
+  </div>
   {% block content %}
     Тут должен быть контент страницы
   {% endblock %}
+  <button onclick="topFunction()" id="myBtn"
+          class="btn bg-primary"
+          title="Прокрутить вверх">
+    <i class="bi bi-arrow-up "></i>
+  </button>
 </main>
 
 {% include 'includes/footer.html' %}
+<style>
+    #myBtn {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: None;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 4px;
+    }
 
+    #myBtn:hover {
+        background-color: #333;
+    }
+</style>
+<script>
+    // Показать кнопку прокрутки вверх, когда прокрутка превышает 20px от верха страницы
+    window.onscroll = function () {
+        scrollFunction()
+    };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("myBtn").style.display = "block";
+        } else {
+            document.getElementById("myBtn").style.display = "none";
+        }
+    }
+
+    // Прокрутка вверх при клике на кнопку
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
 </body>
 </html>
