--- a/yatube/templates/posts/comments.html
+++ b/yatube/templates/posts/comments.html
@@ -1,7 +1,7 @@
 {% load user_filters %}
 
 {% if user.is_authenticated %}
-  <div class="card my-4">
+  <div class="card my-4" id="comment">
     <h5 class="card-header">Добавить комментарий:</h5>
     <div class="card-body">
       <form method="post" action="{% url 'posts:add_comment' post.id %}">
