--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
-  <div class="container py-5">
+
+  <div class="container py-3">
     <div class="mb-5">
       <h1>Последние обновления на сайте</h1>
     </div>
